# flet_marquee

./: README.md
.github/workflows/: linux.yaml
flutter/flet_marquee/: pubspec.yaml
flutter/flet_marquee/lib/: flet_marquee.dart
flutter/flet_marquee/lib/src/: create_control.dart  marquee_control.dart
flutter/flet_marquee/test/: flet_marquee_test.dart
python/: pyproject.toml
python/flet_marquee_app/: main.py  pubspec.yaml
python/flet_marquee_app/controls/: marquee.py
